...
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="location_reminders">Location Reminders</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome to the Location reminder app</string>
    <string name="login">Login</string>
    <string name="no_reminders_all">There are no reminders</string>
    <string name="no_reminders_active">There are no reminders active</string>
    <string name="no_reminders_completed">There are no reminders completed</string>
    <string name="label_all">All Reminders</string>
    <string name="label_active">Active Reminders</string>
    <string name="label_completed">Completed Reminders</string>
...
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_title">Make sure Title is not empty</string>
    <string name="no_description">Make sure Description is not empty</string>
    <string name="unknown_content">Unknown content</string>
    <string name="data_validation">Please verify your data</string>
    <string name="pick_place">Choose a place</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
...
